refactor: simplify nostr-java from 9 modules to 4, remove dead code
Implements the full design simplification (2.0.0):
- Merge 9 modules into 4: core, event, identity, client
- Remove 39 concrete event subclasses, 17 tag subclasses, 27 entities
- GenericEvent as sole event class, GenericTag with List<String> params
- Kinds utility replaces Kind enum, EventFilter builder replaces 14 filters
- NostrRelayClient with Virtual Threads, async APIs, Spring Retry
- RelayTimeoutException replaces silent empty-list returns
- java.util.HexFormat replaces hand-rolled hex encoding
- Delete 21 additional dead classes (IContent, GenericEventConverter, etc.)
- Merge IKey into BaseKey, BaseAuthMessage into BaseMessage hierarchy
- Overhaul all documentation for 2.0 architecture

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>