@@ -4,12 +4,11 @@ import com.fasterxml.jackson.databind.annotation.JsonSerialize;
 import lombok.Data;
 import lombok.EqualsAndHashCode;
 import lombok.NonNull;
-import nostr.base.ElementAttribute;
-import nostr.base.IGenericElement;
 import nostr.event.BaseTag;
 import nostr.event.json.serializer.GenericTagSerializer;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 /**
@@ -18,11 +17,11 @@ import java.util.List;
 @Data
 @EqualsAndHashCode(callSuper = false)
 @JsonSerialize(using = GenericTagSerializer.class)
-public class GenericTag extends BaseTag implements IGenericElement {
+public class GenericTag extends BaseTag {
 
   private String code;
 
-  private final List<ElementAttribute> attributes;
+  private final List<String> params;
 
   public GenericTag() {
     this("");
@@ -32,15 +31,13 @@ public class GenericTag extends BaseTag implements IGenericElement {
     this(code, new ArrayList<>());
   }
 
-  // Removed deprecated compatibility constructor GenericTag(String, Integer) in 1.0.0.
-
-  public GenericTag(@NonNull String code, @NonNull ElementAttribute... attribute) {
-    this(code, List.of(attribute));
+  public GenericTag(@NonNull String code, @NonNull List<String> params) {
+    this.code = code;
+    this.params = new ArrayList<>(params);
   }
 
-  public GenericTag(@NonNull String code, @NonNull List<ElementAttribute> attributes) {
-    this.code = code;
-    this.attributes = attributes;
+  public static GenericTag of(@NonNull String code, @NonNull String... params) {
+    return new GenericTag(code, List.of(params));
   }
 
   @Override
@@ -48,13 +45,22 @@ public class GenericTag extends BaseTag implements IGenericElement {
     return "".equals(this.code) ? super.getCode() : this.code;
   }
 
-  @Override
-  public void addAttribute(@NonNull ElementAttribute... attribute) {
-    this.addAttributes(List.of(attribute));
+  public List<String> getParams() {
+    return Collections.unmodifiableList(this.params);
   }
 
-  @Override
-  public void addAttributes(@NonNull List<ElementAttribute> attributes) {
-    this.attributes.addAll(attributes);
+  public void addParam(@NonNull String param) {
+    this.params.add(param);
+  }
+
+  public void addParams(@NonNull List<String> params) {
+    this.params.addAll(params);
+  }
+
+  public String[] toArray() {
+    List<String> all = new ArrayList<>();
+    all.add(code);
+    all.addAll(params);
+    return all.toArray(new String[0]);
   }
 }
